[package]
name = "solana-client-api"
version = "1.10.0"
description = "Solana Client API"
authors = [
    "Solana Maintainers <maintainers@solana.foundation>",
    "Alexander Meshcheryakov <freecoder.xx@gmail.com>",
]
license = "Apache-2.0"
edition = "2021"

[dependencies]
base64 = "0.13"
bincode = "1.3"
bs58 = "0.4"
indicatif = "0.16"
jsonrpc-core = "18.0"
log = "0.4"
semver = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
solana-account-decoder = { git = "https://github.com/XX/solana-new" }
solana-sdk = { git = "https://github.com/solana-labs/solana" }#, rev = "41c160d58204cb2a9482f558f7285417dd442349" }
solana-transaction-status = { git = "https://github.com/XX/solana-new" }
solana-version = { git = "https://github.com/solana-labs/solana" }
solana-vote-program = { git = "https://github.com/XX/solana-new" }
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "2.33"
solana-clap-utils = { git = "https://github.com/solana-labs/solana" }

[dev-dependencies]
assert_matches = "1.5"
jsonrpc-http-server = "18.0"
solana-logger = { git = "https://github.com/solana-labs/solana" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
